updated employer competetive

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <title>About | Nicole</title>
-  <link rel="stylesheet" href= "assets/css/styles.css">
+  <link rel="stylesheet" src="assets/css/styles.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
-<body class="p-3 mb-2 bg-secondary text-white" >
+<body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo"><h4>Your Name</h4></a>
+      <a href="index.html" id="logo"><h4>Nicole Burich</h4></a>
       <div class= "container" class="navbar-nav" class="float-right"class="form-inline my-2 my-lg-0" >
         <nav class="navbar navbar-expand-lg navbar-light bg-light" class="form inline">
           <a type="button" class="btn btn-primary" class="navbar-brand" href="index.html">About</a>
@@ -29,16 +29,21 @@
       <h1>About Me</h1>
       </div>
       <div class = "col-md">
-      <img src="assets/images/cat.jpg" class= "img-fluid" class="max-width: 100%" class="height: auto" class="auth-image" alt="Your Name">
+      <img src="assets/images/001 - Copy (3).png" class= "img-fluid" class="max-width: 100%" class="height: auto" class="auth-image" alt="Nicole">
       </div>
 <br>
     <div class= "row">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
-
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p>New to the field of coding and technology I have a lot to learn and I'm eager to improve. Through the UCF Coding Bootcamp I have been developed my starting base to launch into the world of coding.
+        This bootcamp has provided me with the knowledge of Front-End and Back-End web development. In Front-End development I work with languages, such as, HTML, CSS, Bootstrap, and Javascript. 
+        For Back-End development the langauges and technologies I worked with consisted of React, React-Native, MySQL, Mongoose, PHP, Express, Handlebars and Node. This propelled me to have the ablilty to create a functioning Full Stack website.
+        I now contain the skills to extend my knowledge of languages and technologies listed as well as learn new languages.
+      </p>
     </div>
+    <div>
+      <h5>Links</h5>
+      <a href="https://www.linkedin.com/in/nicole-burich-520257149/">Linkedin Profile</a>
+      <br>
+      <a href="https://github.com/nBurich">Github Profile</a>
     </div>
 
   </div>
