--- a/portfolio.html
+++ b/portfolio.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
-  <link rel="stylesheet" href= "assets/css/styles.css">
+  <title>Portfolio | Nicole</title>
+  <link rel="stylesheet" src="assets/css/styles.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
-<body class="p-3 mb-2 bg-secondary text-white">
+<body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo"><h4>Your Name</h4></a>
+      <a href="index.html" id="logo"><h4>Nicole Burich</h4></a>
       <div class= "container" class="navbar-nav" class="float-right"class="form-inline my-2 my-lg-0" >
         <nav class="navbar navbar-expand-lg navbar-light bg-light" class="form inline">
           <a type="button" class="btn btn-primary" class="navbar-brand" href="index.html">About</a>
@@ -34,30 +34,30 @@
     <div class= "row">
       
       <div class= "col-md" class="work">
-        <img src="assets/images/wordguess.png" class= "img-fluid" class="max-width: 100%" class="height: auto" alt="Word Guess">
-
-        <h3>Word Guess</h3>
+        <img src="assets/images/nasa-gallery.jpg.optimal.jpg" class= "img-fluid" class="max-width: 100%" class="height: auto" alt="Nasa-Space">
+      
+        <h3>Ground-Control</h3>
       </div>
       <div class= "col-md" class="work">
-        <img src="assets/images/rpg.jpg" class= "img-fluid" class="max-width: 100%" class="height: auto" alt="RPG Game">
+        <img src="assets/images/psychic-1068x571.jpg" class= "img-fluid" class="max-width: 100%" class="height: auto" alt="Psychic">
 
-        <h3>RPG Game</h3>
+        <h3>Psychic_Game</h3>
       </div>
       <div class= "col-md" class="work">
-        <img src="assets/images/trivia.jpg" class= "img-fluid" class="max-width: 100%" class="height: auto" alt="Trivia Game">
+        <img src="assets/images/1-2-click-free-download-png.png" class= "img-fluid" class="max-width: 100%" class="height: auto" alt="Clicky-Game">
 
-        <h3>Trivia Game</h3>
+        <h3>Clicky_Game</h3>
       </div>
 
       <div class= "col-md" class="work">
-        <img src="assets/images/rutgers.jpg" class= "img-fluid" class="max-width: 100%" class="height: auto" alt="Rutgers Info Widget">
+        <img src="assets/images/gif-image.gif" class= "img-fluid" class="max-width: 100%" class="height: auto" alt="Gifs">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>GifTastic</h3>
       </div>
       <div class= "col-md" class="work">
-        <img src="assets/images/rps.jpg" class= "img-fluid" class="max-width: 100%" class="height: auto" alt="Rock Paper Scissors">
+        <img src="assets/images/rhinos.jpg" class= "img-fluid" class="max-width: 100%" class="height: auto" alt="Rhinos">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>Rhinoceros</h3>
       </div>
 
     </div>
