--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Name</title>
-  <link rel="stylesheet" href= "assets/css/styles.css">
+  <title>Contact | Nicole</title>
+  <link rel="stylesheet" src="assets/css/styles.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
-<body class="p-3 mb-2 bg-secondary text-white">
+<body>
 
   <header id="masthead">
     <div class="container">
-      <a class="display-4" href="index.html" id="logo">Your Name</a>
+      <a class="display-4" href="index.html" id="logo">Nicole Burich</a>
     </div>
     <div class= "container" class="navbar-nav" class="float-right"class="form-inline my-2 my-lg-0" >
       <nav class="navbar navbar-expand-lg navbar-light bg-light" class="form inline">
